added more pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,14 +17,14 @@
       <div class="projects">
         <h3>projects</h3>
         <ul>✧ <a href="/corpus">forms of relations are wounds ///</a></ul>
-        <ul>✧ don't look for the love of god (spectulative ritual #2)</ul>
-        <ul>✧ blackout poetry #2</ul>
+        <ul>✧ <a href="/thesis">don't look for the love of god (spectulative ritual #2)</a></ul>
+        <ul>✧ <a href="/blackout2">blackout poetry #2</a></ul>
         <ul>✧ markov chains</ul>
         <ul>✧ blackout poetry #1</ul>
-        <ul>✧ personality generator</ul>
-        <ul>✧ plant finder names</ul>
-        <ul>✧ bedside bartender</ul>
-        <ul>✧ scale of emotional burdens</ul>
+        <ul>✧ <a href="/pg">personality generator</a></ul>
+        <ul>✧ <a href="/pfn">plant finder names</a></ul>
+        <ul>✧ <a href="/bedside-bartender">bedside bartender</a></ul>
+        <ul>✧ <a href="/scale">scale of emotional burdens</a></ul>
         <ul>✧ spectulative ritual #1</ul>
         <ul>✧ pinwheel</ul>
         <ul>✧ ever</ul>
