--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  overflow: clip;
   font-family: monospace;
   background-color: black;
   color: white;
@@ -12,8 +11,8 @@ body {
 nav {
   padding: 10px;
   width: 20%;
-  border: solid white 2px;
-  height: calc(100% - 24px);
+  border-right: solid white 2px;
+  height: 100%;
 }
 
 nav ul {
@@ -24,7 +23,7 @@ nav ul {
 
 h1,
 h3 {
-  box-shadow: 3px 4px 3px grey;
+  box-shadow: 3px 4px 3px yellow;
   padding: 3px 20px;
   border: 1px solid white;
 }
@@ -46,13 +45,7 @@ a {
   left: calc(20% + 24px);
   width: calc(90% - (20% + 24px + 50px));
   padding-left: 50px;
-  overflow-y: scroll;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-/* Hide scrollbar for Chrome, Safari and Opera */
-.content::-webkit-scrollbar {
-  display: none;
+  overflow:auto;
 }
 .content h4{
   font-size: 24px;
@@ -64,6 +57,9 @@ a {
   color: black;
   font-size: 13pt;
 }
+.content .iframe{
+  text-align: center;
+}
 .cover-images{
   margin-top: 10px;
   display: flex;
@@ -73,9 +69,20 @@ a {
   padding-bottom: 10px;
   border-bottom: 2px solid yellow;
   width: 90%;
+  margin-bottom: 10px;
 }
 .cover-images img{
   max-width: calc(100%/3 - 10px);
+  object-fit: cover;
+}
+.pg > img{
+  max-width: calc(100%/2 - 10px);
+}
+.cover-images > .two-image-row{
+  max-width: calc(100%/2 - 10px);
+}
+.single-image-row{
+  min-width: 100%;
 }
 
 @media (min-width: 320px) {
