--- a/views/projects/corpus.handlebars
+++ b/views/projects/corpus.handlebars
@@ -7,5 +7,6 @@
         <img src="assets/corpus/2.png">
         <img src="assets/corpus/3.png">
         <img src="assets/corpus/4.gif">
+        <img src="assets/corpus/5.gif">
     </div>
 </div>
