--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,24 +13,29 @@
   </head>
   <body>
     <nav>
-      <div class="name"><h1>✧✧✧ sam heckle ✧✧✧</h1></div>
+      <div class="name"><h1><a href="/">✧✧✧ sam heckle ✧✧✧</a></h1></div>
       <div class="projects">
         <h3>projects</h3>
         <ul>✧ <a href="/corpus">forms of relations are wounds ///</a></ul>
+        <ul>✧ <a href="/valentine">will u be my valentine?</a></ul>
         <ul>✧ <a href="/thesis">don't look for the love of god (spectulative ritual #2)</a></ul>
         <ul>✧ <a href="/blackout2">blackout poetry #2</a></ul>
-        <ul>✧ markov chains</ul>
-        <ul>✧ blackout poetry #1</ul>
         <ul>✧ <a href="/pg">personality generator</a></ul>
+        <ul>✧ <a href="/linear-reprise">a linear story (reprised)</a></ul>
         <ul>✧ <a href="/pfn">plant finder names</a></ul>
         <ul>✧ <a href="/bedside-bartender">bedside bartender</a></ul>
         <ul>✧ <a href="/scale">scale of emotional burdens</a></ul>
-        <ul>✧ spectulative ritual #1</ul>
-        <ul>✧ pinwheel</ul>
+        <ul>✧ <a href="/spectulative-ritual-1">spectulative ritual #1</a></ul>
+        <ul>✧ <a href="/pinwheel">pinwheel</a></ul>
         <ul>✧ ever</ul>
         <ul>✧ pomodoro timer</ul>
         <ul>✧ reaction diffusion</ul>
         <ul>✧ 2016 election visualization</ul>
+      </div>
+      <div class="research">
+        <h3>research</h3>
+        <ul>✧ markov chains</ul>
+        <ul>✧ blackout poetry #1</ul>
       </div>
       <div class="about">
         <h3>about</h3>
