--- a/views/projects/scale.handlebars
+++ b/views/projects/scale.handlebars
@@ -3,6 +3,6 @@
     <div class="cover-images">
         <img class="two-image-row" src="assets/scale/1.jpg">
         <img class="two-image-row" src="assets/scale/2.jpg">
-        <img class="single-image-row" src="assets/scale/3.jpg">
+        <div class="image-container"><img class="full-image-row" src="assets/scale/3.png"></div>
     </div>
 </div>
