--- a/views/projects/bedside_bartender.handlebars
+++ b/views/projects/bedside_bartender.handlebars
@@ -1,11 +1,9 @@
 <div id="blackout2" class="content">
     <h4>bedside bartender</h4>
     <div class="cover-images">
-        <img src="assets/bedside_bartender/3Quater.png">
-        <img src="assets/bedside_bartender/Front.png">
-        <img src="assets/bedside_bartender/Ortho.png">
-    </div>
-    <div class="iframe">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/t8E7uKg4IqM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <img class="two-image-row" src="assets/bedside_bartender/blinking.gif">
+        <img class="two-image-row" src="assets/bedside_bartender/3Quater.png">
+        <img class="two-image-row" src="assets/bedside_bartender/Side.png">
+        <img class="two-image-row" src="assets/bedside_bartender/Ortho.png">
     </div>
 </div>
