--- a/views/projects/blackout2.handlebars
+++ b/views/projects/blackout2.handlebars
@@ -1,9 +1,10 @@
 <div id="blackout2" class="content">
     <h4>blackout poetry #2</h4>
-    <a href="https://samheckle.github.io/hosted/gen-blackout-poetry/">  ✧✧✧ interact with me ✧✧✧ </a> 
-    <div class="cover-images">
-        <img src="assets/blackout2/1.png">
-        <img src="assets/blackout2/2.png">
-        <img src="assets/blackout2/3.png">
-    </div>
+    <a href="/blackout2">  ✧✧✧ this takes a minute to load ✧✧✧ </a> 
+    <div id="content"></div>
+    <script src="/blackout2/main.js"></script>
+    {{!-- <div class="cover-images">
+        <img class="two-image-row" src="assets/blackout2/1.png">
+        <img class="two-image-row" src="assets/blackout2/3.png">
+    </div> --}}
 </div>
