--- a/views/projects/blackout2.handlebars
+++ b/views/projects/blackout2.handlebars
@@ -1,10 +1,11 @@
 <div id="blackout2" class="content">
-    <h4>blackout poetry #2</h4>
-    <a href="/blackout2">  ✧✧✧ this takes a minute to load ✧✧✧ </a> 
-    <div id="content"></div>
-    <script src="/blackout2/main.js"></script>
-    {{!-- <div class="cover-images">
+  <h4>blackout poetry #2</h4>
+  <a href="https://samheckle.github.io/hosted/gen-blackout-poetry/"> ✧✧✧ this takes a minute to load ✧✧✧ </a>
+  {{!-- <div id="content"></div> --}}
+  {{!-- <script src="/blackout2/main.js"></script> --}}
+  <div class="cover-images">
         <img class="two-image-row" src="assets/blackout2/1.png">
         <img class="two-image-row" src="assets/blackout2/3.png">
-    </div> --}}
+    </div> 
+    
 </div>
