--- a/views/projects/corpus.handlebars
+++ b/views/projects/corpus.handlebars
@@ -9,4 +9,8 @@
         <img src="assets/corpus/4.gif">
         <img src="assets/corpus/5.gif">
     </div>
+    <div class="footer">
+        <div class="date">mar 2023</div>
+        <div class="tools">p5.js</div>
+    </div>
 </div>
