--- a/views/projects/pg.handlebars
+++ b/views/projects/pg.handlebars
@@ -1,8 +1,12 @@
-<div id="blackout2" class="content">
+<div id="pg" class="content">
     <h4>personality generator</h4>
     <a href="https://samheckle.github.io/hosted/pg/">  ✧✧✧ interact with me ✧✧✧ </a> 
     <div class="cover-images pg">
         <img src="assets/pg/beautiful.png">
         <img src="assets/pg/uncoop.png">
+    </div>
+    <div class="footer">
+      <div class="date">feb 2022</div>
+      <div class="tools">python, tracery, flask</div>
     </div>
 </div>
