--- a/views/projects/scale.handlebars
+++ b/views/projects/scale.handlebars
@@ -1,8 +1,12 @@
-<div id="blackout2" class="content">
+<div id="scale" class="content">
     <h4>scale of emotional burdens</h4>
-    <div class="cover-images">
-        <img class="two-image-row" src="assets/scale/1.jpg">
-        <img class="two-image-row" src="assets/scale/2.jpg">
-        <div class="image-container"><img class="full-image-row" src="assets/scale/3.png"></div>
+    <div class="cover-images scale">
+        <img class="" src="assets/scale/1.jpg">
+        <img class="" src="assets/scale/3.png">
+        <img class="" src="assets/scale/2.jpg">
+    </div>
+    <div class="footer">
+      <div class="date">sept 2021</div>
+      <div class="tools">arduino, acrylic, led screen</div>
     </div>
 </div>
