--- a/views/projects/thesis.handlebars
+++ b/views/projects/thesis.handlebars
@@ -5,6 +5,10 @@
         <img src="assets/thesis/slide2.jpg">
         <img src="assets/thesis/slide3.png">
     </div>
+    <div class="footer">
+      <div class="date">april 2022</div>
+      <div class="tools">electron.js, python, gpt-2, plywood</div>
+    </div>
     <div class="iframe">
     <iframe src="https://player.vimeo.com/video/715867942?h=250d998479" width="640" height="360" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
