--- a/views/projects/valentine.handlebars
+++ b/views/projects/valentine.handlebars
@@ -1,7 +1,14 @@
 <div id="valentine" class="content">
-    <h4>will u be my valentine?</h4>
-    <div class="cover-images">
-        
-        <div class="image-container"><img class="full-image-row" src="assets/valentine.JPG"></div>
+  <h4>will u be my valentine?</h4>
+  <div class="cover-images">
+
+    <div class="image-container"><img
+        class="full-image-row valentine"
+        src="assets/valentine.JPG"
+      /></div>
+  </div>
+    <div class="footer">
+      <div class="date">feb 2023</div>
+      <div class="tools">eink, aluminum, plywood</div>
     </div>
 </div>
