--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,8 @@ a {
 }
 
 /* per page styling */
-.content, .play{
+.content,
+.play {
   position: absolute;
   top: 0;
   left: calc(20% + 24px);
@@ -49,29 +50,28 @@ a {
   overflow: auto;
   height: 100%;
 }
-.play{
+.play {
   color: black;
-  max-height: 100%;
+  max-height: 90%;
   overflow: clip;
+  display: block;
+  border-bottom: 2px solid yellow;
 }
-.content h4{
+.content h4 {
   font-size: 24px;
   margin-bottom: 5px;
 }
-.content a{
+.content a {
   margin-bottom: 10px;
   background-color: yellow;
   color: black;
   font-size: 13pt;
 }
-.content .iframe{
-  /* text-align: center; */
-}
 .iframe > iframe {
   width: 90%;
   height: 500px;
 }
-.cover-images{
+.cover-images {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
@@ -83,23 +83,72 @@ a {
   margin-bottom: 10px;
   justify-content: space-between;
 }
-.cover-images img{
-  max-width: calc(100%/3 - 10px);
+.cover-images img {
+  max-width: calc(100% / 3 - 10px);
   object-fit: cover;
 }
-.pg > img{
-  max-width: calc(100%/2 - 10px);
+.cover-images .scale{
+  height: 90%;
 }
-.cover-images > .two-image-row{
-  max-width: calc(100%/2 - 10px);
+.pg > img {
+  max-width: calc(100% / 2 - 10px);
 }
-.image-container{
+.cover-images > .two-image-row {
+  max-width: calc(100% / 2 - 10px);
+  max-height: 300px;
+}
+.white{
+  background-color: #e8e9e8;
+  text-align: center;
+  width:100%;
+}
+.white > img{
+  min-width: 300px;
+}
+.image-container {
   width: 100%;
   height: 100%;
 }
-.image-container > .full-image-row{
+.image-container > .full-image-row {
   width: 100%;
   max-width: 100%;
+}
+.image-container .valentine{
+  max-height: 600px;
+  object-fit:scale-down;
+}
+.footer{
+  width: 90%;
+  font-style:italic;
+  display: flex;
+  justify-content: space-between;
+}
+/* specific to blackout */
+#blackout2 > #content{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.blackouti{
+  max-width: 100%;
+  max-height: 100%;
+  display: block; 
+  margin: auto;
+}
+.blackoutp{
+  position: absolute;
+  box-shadow: 2px 4px 3px gray;
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 10;
+  text-decoration: none;
+  border-color: black;
+  border-style: solid;
+  padding: 3px 20px;
+  border-width: 1px;
+  margin: 1em 0.5em;
+  display: inline-block;
+  background-color: white;
 }
 
 @media (min-width: 320px) {
