--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@1,800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" type="text/css"/>
   </head>
   <body>
     <nav>
@@ -19,7 +19,7 @@
         <ul>✧ <a href="/corpus">forms of relations are wounds ///</a></ul>
         <ul>✧ <a href="/valentine">will u be my valentine?</a></ul>
         <ul>✧ <a href="/thesis">don't look for the love of god (spectulative ritual #2)</a></ul>
-        <ul>✧ <a href="/blackout2">blackout poetry #2</a></ul>
+        {{!-- <ul>✧ <a href="/blackout2">blackout poetry #2</a></ul> --}}
         <ul>✧ <a href="/pg">personality generator</a></ul>
         <ul>✧ <a href="/linear-reprise">a linear story (reprised)</a></ul>
         <ul>✧ <a href="/pfn">plant finder names</a></ul>
@@ -27,19 +27,18 @@
         <ul>✧ <a href="/scale">scale of emotional burdens</a></ul>
         <ul>✧ <a href="/spectulative-ritual-1">spectulative ritual #1</a></ul>
         <ul>✧ <a href="/pinwheel">pinwheel</a></ul>
-        <ul>✧ ever</ul>
         <ul>✧ pomodoro timer</ul>
         <ul>✧ reaction diffusion</ul>
         <ul>✧ 2016 election visualization</ul>
       </div>
       <div class="research">
-        <h3>research</h3>
+        <h3>research (wip)</h3>
         <ul>✧ markov chains</ul>
         <ul>✧ blackout poetry #1</ul>
       </div>
       <div class="about">
         <h3>about</h3>
-        <ul>✧ cv</ul>
+        <ul>✧ <a href="/resume">cv</a></ul>
         <ul>✧ bio</ul>
       </div>
     </nav>
