--- a/views/projects/bedside_bartender.handlebars
+++ b/views/projects/bedside_bartender.handlebars
@@ -1,9 +1,13 @@
-<div id="blackout2" class="content">
+<div id="bedside-bartender" class="content">
     <h4>bedside bartender</h4>
     <div class="cover-images">
-        <img class="two-image-row" src="assets/bedside_bartender/blinking.gif">
+        <div class="two-image-row white"><img class="" src="assets/bedside_bartender/blinking.gif"></div>
         <img class="two-image-row" src="assets/bedside_bartender/3Quater.png">
         <img class="two-image-row" src="assets/bedside_bartender/Side.png">
         <img class="two-image-row" src="assets/bedside_bartender/Ortho.png">
+    </div>
+    <div class="footer">
+        <div class="date">oct 2023</div>
+        <div class="tools">lcd screen, raspberry pi, processing, plywood, acrylic</div>
     </div>
 </div>
