--- a/views/projects/pfn.handlebars
+++ b/views/projects/pfn.handlebars
@@ -1,7 +1,12 @@
-<div id="blackout2" class="content">
+<div id="plant-finder" class="content">
     <h4>plant finder names</h4>
     <a href="https://samheckle.github.io/hosted/plant-finder-names/">  ✧✧✧ interact with me ✧✧✧ </a> 
     <div class="cover-images">
+    </div>
+
+    <div class="footer">
+      <div class="date">aug 2021</div>
+      <div class="tools">p5.js, tensorflow.js</div>
     </div>
     <div class="iframe">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ym8fv9i_M4w" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
