--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <nav>
@@ -27,9 +28,9 @@
         <ul>✧ <a href="/scale">scale of emotional burdens</a></ul>
         <ul>✧ <a href="/spectulative-ritual-1">spectulative ritual #1</a></ul>
         <ul>✧ <a href="/pinwheel">pinwheel</a></ul>
-        <ul>✧ pomodoro timer</ul>
-        <ul>✧ reaction diffusion</ul>
-        <ul>✧ 2016 election visualization</ul>
+        {{!-- <ul>✧ pomodoro timer</ul> --}}
+        <ul>✧ <a href="/reaction">reaction diffusion</a></ul>
+        {{!-- <ul>✧ 2016 election visualization</ul> --}}
       </div>
       <div class="research">
         <h3>research (wip)</h3>
@@ -38,8 +39,9 @@
       </div>
       <div class="about">
         <h3>about</h3>
-        <ul>✧ <a href="/resume">cv</a></ul>
         <ul>✧ bio</ul>
+        <ul>✧ <a href="https://samheckle.github.io/projects/" target="_blank">blog</a></ul>
+        <ul>✧ <a href="/resume">cv</a></ul>
       </div>
     </nav>
 
