--- a/views/projects/pg.handlebars
+++ b/views/projects/pg.handlebars
@@ -1,12 +1,30 @@
 <div id="pg" class="content">
     <h4>personality generator</h4>
     <a href="https://samheckle.github.io/hosted/pg/">  ✧✧✧ interact with me ✧✧✧ </a> 
-    <div class="cover-images pg">
-        <img src="assets/pg/beautiful.png">
-        <img src="assets/pg/uncoop.png">
-    </div>
     <div class="footer">
       <div class="date">feb 2022</div>
+    <div class="blog"><a href="https://samheckle.github.io/projects/generated-personality/" target="_blank">blog</a></div>
       <div class="tools">python, tracery, flask</div>
     </div>
+    {{!-- <div class="cover-images pg">
+        <img src="assets/pg/beautiful.png">
+        <img src="assets/pg/uncoop.png">
+    </div> --}}
+  <div class="carousel-content">
+    <div class="carousel">
+      <img class="carousel-item" src="assets/pg/beautiful.png">
+      <img class="carousel-item" src="assets/pg/uncoop.png">
+    </div>
+    <div class="scroll-btns">
+        <div
+        id="btn-back"
+        class="scroll-btn"
+      >👈</div>
+        <div
+        id="btn-forward"
+        class="scroll-btn"
+      >👉</div></div>
+    </div>
+
+    
 </div>
