--- a/views/projects/pinwheel.handlebars
+++ b/views/projects/pinwheel.handlebars
@@ -1,7 +1,12 @@
 <div id="pinwheel" class="content">
     <h4>pinwheel</h4>
+    <div class="footer full">
+        <div class="date">mar 2022</div>
+    <div class="blog"><a href="https://samheckle.github.io/projects/rotated-concrete-poetry/" target="_blank">blog</a></div>
+        <div class="tools">python</div>
+    </div>
     <div class="cover-images">
-        
         <div class="image-container"><img class="full-image-row" src="assets/pinwheel.png"></div>
     </div>
+
 </div>
