--- a/views/projects/scale.handlebars
+++ b/views/projects/scale.handlebars
@@ -1,12 +1,29 @@
 <div id="scale" class="content">
     <h4>scale of emotional burdens</h4>
-    <div class="cover-images scale">
+    <div class="footer">
+      <div class="date">sept 2021</div>
+    <div class="blog"><a href="https://samheckle.github.io/projects/emotional-scale/" target="_blank">blog</a></div>
+      <div class="tools">arduino, acrylic, led screen</div>
+    </div>
+    {{!-- <div class="cover-images scale">
         <img class="" src="assets/scale/1.jpg">
         <img class="" src="assets/scale/3.png">
         <img class="" src="assets/scale/2.jpg">
+    </div> --}}
+      <div class="carousel-content">
+     <div class="carousel">
+      <img class="carousel-item scale" src="assets/scale/1.jpg">
+      <img class="carousel-item scale" src="assets/scale/3.png">
+      <img class="carousel-item scale" src="assets/scale/2.jpg">
     </div>
-    <div class="footer">
-      <div class="date">sept 2021</div>
-      <div class="tools">arduino, acrylic, led screen</div>
-    </div>
+    <div class="scroll-btns">
+        <div
+        id="btn-back"
+        class="scroll-btn"
+      >👈</div>
+        <div
+        id="btn-forward"
+        class="scroll-btn"
+      >👉</div></div>
+      </div>
 </div>
