--- a/views/projects/spec-ritual-1.handlebars
+++ b/views/projects/spec-ritual-1.handlebars
@@ -1,10 +1,36 @@
 <div id="spec-ritual-1" class="content">
-    <h4>speculative ritual #1</h4>
-    <div class="cover-images">
+  <h4>speculative ritual #1</h4>
+
+    <div class="footer">
+        <div class="date">april 2022</div>
+
+    <div class="blog"><a href="https://samheckle.github.io/projects/speculative-ritual-1/" target="_blank">blog</a></div>
+        <div class="tools">python, axidraw, salt, paper</div>
+    </div>
+  {{! <div class="cover-images">
         
         <img class="two-image-row" src="assets/spec-ritual-1/4.gif">
         <img class="two-image-row" src="assets/spec-ritual-1/1.png">
         <img class="two-image-row" src="assets/spec-ritual-1/2.jpg">
         <img class="two-image-row" src="assets/spec-ritual-1/3.png">
+    </div> }}
+  <div class="carousel-content">
+
+    <div class="carousel">
+      <img class="carousel-item vertical" src="assets/spec-ritual-1/4.gif" />
+      <img class="carousel-item vertical" src="assets/spec-ritual-1/1.png" />
+      <img class="carousel-item vertical" src="assets/spec-ritual-1/2.jpg" />
+      <img class="carousel-item vertical" src="assets/spec-ritual-1/3.png" />
     </div>
+    <div class="scroll-btns">
+        <div
+        id="btn-back"
+        class="scroll-btn"
+      >👈</div>
+        <div
+        id="btn-forward"
+        class="scroll-btn"
+      >👉</div></div>
+
+  </div>
 </div>
