--- a/views/projects/corpus.handlebars
+++ b/views/projects/corpus.handlebars
@@ -1,6 +1,11 @@
 <div id="corpus" class="content">
     <h4>forms of relations are wounds /// </h4>
     👉 <a href="https://corpusof.gay">  ✧✧✧ interact with me ✧✧✧ </a>  👈
+
+    <div class="footer full">
+        <div class="date">mar 2023</div>
+        <div class="tools">p5.js</div>
+    </div>
     <div class="cover-images">
         <img src="assets/corpus/main.gif">
         <img src="assets/corpus/1.png">
@@ -8,9 +13,5 @@
         <img src="assets/corpus/3.png">
         <img src="assets/corpus/4.gif">
         <img src="assets/corpus/5.gif">
-    </div>
-    <div class="footer">
-        <div class="date">mar 2023</div>
-        <div class="tools">p5.js</div>
     </div>
 </div>
