--- a/views/projects/linear_reprise.handlebars
+++ b/views/projects/linear_reprise.handlebars
@@ -36,28 +36,39 @@
   src="linear_story/interpreter/A Linear Story.gblorb.js"
   type="text/javascript"
 ></script>
-<h4 class="linear-reprise-title">a linear story (reprise)</h4>
-<div class="play">
-  <div class="container">
-    <div class="links">
-      <div class="smalltitle">A Linear Story</div>
-    </div>
+<div class="content">
 
-    <div id="gameport">
-      <div id="windowport">
-        <noscript><hr />
-          <p>You'll need to turn on Javascript in your web browser to play this
-            game.</p>
-          <hr /></noscript>
+  <h4 class="linear-reprise-title">a linear story (reprise)</h4>
+  <div class="footer">
+    <div class="date">feb 2022</div>
+    {{!-- <div class="blog"><a
+        href="https://samheckle.github.io/projects/generated-personality/"
+        target="_blank"
+      >blog</a></div> --}}
+    <div class="tools">python, tracery, flask</div>
+  </div>
+  <div class="play" style="position: absolute;top: 100px;width: 90%;left: 45px;height: 550px;">
+    <div class="container">
+      <div class="links">
+        <div class="smalltitle">A Linear Story</div>
       </div>
-      <div id="loadingpane">
-        <img src="linear_story/interpreter/waiting.gif" alt="LOADING" /><br />
-        <em>&nbsp;&nbsp;&nbsp;Loading...</em>
-      </div>
-      <div id="errorpane" style="display:none;"><div
-          id="errorcontent"
-        >...</div></div>
-    </div>
 
+      <div id="gameport">
+        <div id="windowport">
+          <noscript><hr />
+            <p>You'll need to turn on Javascript in your web browser to play
+              this game.</p>
+            <hr /></noscript>
+        </div>
+        <div id="loadingpane">
+          <img src="linear_story/interpreter/waiting.gif" alt="LOADING" /><br />
+          <em>&nbsp;&nbsp;&nbsp;Loading...</em>
+        </div>
+        <div id="errorpane" style="display:none;"><div
+            id="errorcontent"
+          >...</div></div>
+      </div>
+
+    </div>
   </div>
 </div>
