--- a/views/projects/pfn.handlebars
+++ b/views/projects/pfn.handlebars
@@ -1,14 +1,26 @@
 <div id="plant-finder" class="content">
-    <h4>plant finder names</h4>
-    <a href="https://samheckle.github.io/hosted/plant-finder-names/">  ✧✧✧ interact with me ✧✧✧ </a> 
-    <div class="cover-images">
-    </div>
-
+  <h4>plant finder names</h4>
+  <a href="https://samheckle.github.io/hosted/plant-finder-names/">
+    ✧✧✧ interact with me ✧✧✧
+  </a>
     <div class="footer">
-      <div class="date">aug 2021</div>
-      <div class="tools">p5.js, tensorflow.js</div>
+    <div class="date">aug 2021</div>
+    <div class="tools">p5.js, tensorflow.js</div>
+  </div>
+  <div class="carousel-content">
+    <div class="carousel carousel-center">
+
+      <div class="iframe carousel-item">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Ym8fv9i_M4w"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
-    <div class="iframe">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ym8fv9i_M4w" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+  </div>
 </div>
