--- a/views/projects/thesis.handlebars
+++ b/views/projects/thesis.handlebars
@@ -1,15 +1,38 @@
 <div id="thesis" class="content">
-    <h4>don't look for the love of god</h4>
-    <div class="cover-images">
+  <h4>don't look for the love of god</h4>
+
+  <div class="footer">
+    <div class="date">april 2022</div>
+    <div class="blog"><a href="https://samheckle.github.io/blog/thesis" target="_blank">blog</a></div>
+    <div class="tools">electron.js, python, gpt-2, plywood</div>
+  </div>
+  {{! <div class="cover-images">
         <img src="assets/thesis/slide1.png">
         <img src="assets/thesis/slide2.jpg">
         <img src="assets/thesis/slide3.png">
+    </div> }}
+
+  <div class="carousel-content">
+    <div class="carousel">
+      <img class="carousel-item" src="assets/thesis/slide1.png" />
+      {{! <img class="carousel-item" src="assets/thesis/slide2.jpg"> }}
+      <img class="carousel-item adjust--image" src="assets/thesis/slide3.png" />
+      <div class="iframe carousel-item">
+        <iframe
+          src="https://player.vimeo.com/video/715867942?h=250d998479"
+          width="640"
+          height="360"
+          frameborder="0"
+          allow="fullscreen; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
-    <div class="footer">
-      <div class="date">april 2022</div>
-      <div class="tools">electron.js, python, gpt-2, plywood</div>
-    </div>
-    <div class="iframe">
+    <div class="scroll-btns">
+      <div id="btn-back" class="scroll-btn">👈</div>
+      <div id="btn-forward" class="scroll-btn">👉</div></div>
+  </div>
+  {{! <div class="iframe">
     <iframe src="https://player.vimeo.com/video/715867942?h=250d998479" width="640" height="360" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    </div> }}
 </div>
