--- a/views/projects/valentine.handlebars
+++ b/views/projects/valentine.handlebars
@@ -1,14 +1,13 @@
 <div id="valentine" class="content">
   <h4>will u be my valentine?</h4>
+    <div class="footer full">
+      <div class="date">feb 2023</div>
+      <div class="tools">eink, aluminum, plywood</div>
+    </div>
   <div class="cover-images">
-
     <div class="image-container"><img
         class="full-image-row valentine"
         src="assets/valentine.JPG"
       /></div>
   </div>
-    <div class="footer">
-      <div class="date">feb 2023</div>
-      <div class="tools">eink, aluminum, plywood</div>
-    </div>
 </div>
