--- a/views/about/resume.handlebars
+++ b/views/about/resume.handlebars
@@ -1,4 +1,4 @@
 <div class="content">
 
-<object class="pdf" data="Nov2022_heckle_resume.pdf" type="application/pdf" width="100%" height="700px">
+<object class="pdf" data="assets/feb2024_heckle_resume.pdf" type="application/pdf" width="100%" height="700px">
 </div>
