--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
       </div>
       <div class="about">
         <h3>about</h3>
-        <ul>✧ bio</ul>
+        <ul>✧ <a href="/bio">bio</a></ul>
         <ul>✧ <a href="https://samheckle.github.io/projects/" target="_blank">blog</a></ul>
         <ul>✧ <a href="/resume">cv</a></ul>
       </div>
