--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,8 @@
       <div class="name"><h1><a href="/">✧✧✧ sam heckle ✧✧✧</a></h1></div>
       <div class="projects">
         <h3>projects</h3>
+        <ul>✧ <a href="https://corpusof.gay/spam">HNGS</a></ul>
+        <ul>✧ <a href="https://samheckle.github.io/limerence/public/">limerance</a></ul>
         <ul>✧ <a href="/corpus">forms of relations are wounds ///</a></ul>
         <ul>✧ <a href="/valentine">will u be my valentine?</a></ul>
         <ul>✧ <a href="/thesis">don't look for the love of god (spectulative ritual #2)</a></ul>
@@ -32,15 +34,29 @@
         <ul>✧ <a href="/reaction">reaction diffusion</a></ul>
         {{!-- <ul>✧ 2016 election visualization</ul> --}}
       </div>
-      <div class="research">
+      <div class="classes">
+        <h3>classes</h3>
+        <ul>✧ <a href="">networked media</a></ul>
+        <ul>✧ <a href="">experimental coding</a></ul>
+        <ul>✧ <a href="">capstone</a></ul>
+        <ul>✧ <a href="">creative machine learning</a></ul>
+        <ul>✧ <a href="">introduction to computational media</a></ul>
+      </div>
+      <div class="talks">
+        <h3>talks</h3>
+      </div>
+      <div class="exhibitions">
+        <h3>exhibitions</h3>
+      </div>
+      {{!-- <div class="research">
         <h3>research (wip)</h3>
         <ul>✧ markov chains</ul>
         <ul>✧ blackout poetry #1</ul>
-      </div>
+      </div> --}}
       <div class="about">
         <h3>about</h3>
-        <ul>✧ <a href="/bio">bio</a></ul>
         <ul>✧ <a href="https://samheckle.github.io/projects/" target="_blank">blog</a></ul>
+        <ul>✧ <a href="/bio">bio</a></ul>
         <ul>✧ <a href="/resume">cv</a></ul>
       </div>
     </nav>
