--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,12 +42,12 @@
         <ul>✧ <a href="">creative machine learning</a></ul>
         <ul>✧ <a href="">introduction to computational media</a></ul>
       </div>
-      <div class="talks">
+      {{!-- <div class="talks">
         <h3>talks</h3>
       </div>
       <div class="exhibitions">
         <h3>exhibitions</h3>
-      </div>
+      </div> --}}
       {{!-- <div class="research">
         <h3>research (wip)</h3>
         <ul>✧ markov chains</ul>
