--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
       <div class="projects">
         <h3>projects</h3>
         <ul>✧ <a href="https://corpusof.gay/spam">HNGS</a></ul>
-        <ul>✧ <a href="https://samheckle.github.io/limerence/public/">limerance</a></ul>
+        <ul>✧ <a href="/limerance">limerance</a></ul>
         <ul>✧ <a href="/corpus">forms of relations are wounds ///</a></ul>
         <ul>✧ <a href="/valentine">will u be my valentine?</a></ul>
         <ul>✧ <a href="/thesis">don't look for the love of god (spectulative ritual #2)</a></ul>
