--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,5 @@
-<script src="https://cdn.jsdelivr.net/npm/p5.glitch@latest/p5.glitch.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+<script src="p5.glitch.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
 <script src="p5.gif.min.js"></script>
 <script src="fridge.js"></script>
 
