updated some things

--- a/views/classes.handlebars
+++ b/views/classes.handlebars
@@ -1,12 +1,236 @@
 <div class="content classes">
   <h4>classes</h4>
   <div id="class-filter">
-    {{!-- <a href="/classes?sem=spring24">spring 2024</a>
-    <a href="/classes?sem=fall23">fall 2023</a> --}}
   </div>
   <div class="text">
-    
+
+    <div id="net-media">
+      <div class="c-title">
+        Networked Media
+      </div>
+      <div class="c-syl">
+        <a
+          href="https://docs.google.com/document/d/1zksA7jtaVaZmCPJaXwW9bwIJHxwPZb4KbiKX5jb-EMM/edit?usp=sharing"
+        >current syllabus</a>
+      </div>
+      <div class="c-school">
+        NYU - Tisch - Interactive Media Arts
+      </div>
+      <div class="c-sem">
+        <span class="s23">Spring 2023</span>
+        <span class="s24">Spring 2024</span>
+        <span class="f24">Fall 2024</span>
+        <span class="s25">Spring 2025</span>
+        <span class="f25">Fall 2025</span>
+      </div>
+      <div class="c-description">
+        The network is a fundamental medium for interactivity. It makes possible
+        our interaction with machines, data, and, most importantly, other
+        people. Though the base interaction it supports is simple, a client
+        sends a request to a server, which replies; an incredible variety of
+        systems can be and have been built on top of it. An equally impressive
+        body of media theory has also arisen around its use.
+        <br />
+
+        This hybrid theory and technology course will be 50% project driven
+        technical work and 50% theory and discussion. The technical work will
+        utilize JavaScript as both a client and server side programming language
+        to build creative systems on the web. Technical topics will include
+        server and client web frameworks, such as Express, HTML, CSS,
+        templating, and databases. The theory portion of the course will include
+        reading and discussion of past and current media theory texts that
+        relate to the networks of today.
+        <br />
+
+        In short, this course will be about developing full-stack web
+        applications (such as anything from the beginnings of Google, YouTube,
+        and Twitter to class registration systems and other purpose built
+        systems) as well as thinking, reading, and discussing the implications
+        with a culture and media theory perspective.
+      </div>
+    </div>
+    <div id="creative-code">
+      <div class="c-title">
+        Creative Coding
+      </div>
+      <div class="c-syl">
+        <a href="/assets/syllabus/hunter-sp-25-syllabus.pdf">current syllabus</a>
+      </div>
+      <div class="c-school">
+        CUNY Hunter College - Film and Media
+      </div>
+      <div class="c-sem">
+        <span class="f24">Fall 2024</span>
+        <span class="s25">Spring 2025</span>
+      </div>
+      <div class="c-description">
+        This course introduces experimental coding for design through hands-on
+        technical exercises and projects. During the semester, p5.js (JavaScript
+        library) will show the fundamentals of computational design. We will
+        learn techniques to build generative design and digital interaction.
+        This course is designed for students with no prior coding experience.
+      </div>
+
+    </div>
     <div id="exp-coding">
+      <div class="c-title">
+        Experimental Coding
+      </div>
+      <div class="c-syl">
+        <a href="/assets/syllabus/sva-syllabus.pdf">current syllabus</a>
+      </div>
+      <div class="c-school">
+        SVA BFA Design
+      </div>
+      <div class="c-sem">
+        <span class="f23">Fall 2023</span>
+        <span class="s24">Spring 2024</span>
+        <span class="f24">Fall 2024</span>
+        <span class="s25">Spring 2025</span>
+        <span class="f25">Fall 2025</span>
+      </div>
+      <div class="c-description">
+        This course provides an introduction to experimental coding for design
+        through a series of hands-on technical exercises and projects. During
+        the semester HTML, CSS and p5.js (JavaScript library) will be used to
+        illustrate the fundamentals of computational design. We will learn
+        techniques to build for responsive web design, generative design and
+        digital interaction. This course is designed for students with no prior
+        coding experience
+      </div>
+
+    </div>
+
+    <div id="ima-capstone">
+      <div class="c-title">
+        IMA Capstone
+      </div>
+      <div class="c-syl">
+        <a
+          href="https://docs.google.com/document/d/1BXsTxlaXGIJyKktePbMJQm8aL0_cvqR4qe-JpF8DRrk/edit?usp=sharing"
+        >current syllabus</a>
+      </div>
+      <div class="c-school">
+        NYU - Tisch - Interactive Media Arts
+      </div>
+      <div class="c-sem">
+        <span class="s24">Spring 2024</span>
+        <span class="s25">Spring 2025</span>
+      </div>
+      <div class="c-description">
+        The Capstone Studio course asks students to produce an interactive
+        project (with documentation), a research paper, and a personal
+        portfolio. The interactive project will illustrate students’ unique
+        interests as well as evidence of competency within the field of
+        interactive media production. Students are encouraged to develop their
+        project around a theme previously explored in their work. Projects will
+        be presented and critiqued repeatedly throughout the capstone process to
+        peers, faculty, and industry professionals. A final presentation of the
+        interactive project will be delivered late in the semester.
+
+      </div>
+
+    </div>
+
+    <div id="creative-ml">
+      <div class="c-title">
+        Creative Machine Learning
+      </div>
+      <div class="c-syl">
+        <a href="/assets/syllabus/creative-ml.pdf">current syllabus</a>
+      </div>
+      <div class="c-school">
+        New School - Parsons - Design and Technology
+      </div>
+      <div class="c-sem">
+        <span class="f23">Fall 2023</span>
+      </div>
+      <div class="c-description">
+        Creative Machine Learning is an elective 3-hr/week combination studio
+        and technical class to offer students a basic understanding of machine
+        learning through creative applications. The class will cover topics such
+        as data collection/processing and machine learning algorithms, with a
+        focus on critical engagement with enterprise, consumer, and experimental
+        AI tools. The class will also introduce a range of current artists
+        leveraging machine learning. By the end of the course, students will
+        have gained an understanding of the possibilities and limitations of
+        machine learning as a tool for creative expression, and will be equipped
+        with the technical and creative skills needed to continue exploring this
+        exciting and rapidly-evolving field.
+      </div>
+
+    </div>
+
+    <div id="itp-icm">
+      <div class="c-title">
+        Introduction to Computational Media
+      </div>
+      <div class="c-syl">
+        <a
+          href="https://github.com/ITPNYU/ICM-2023-Code/wiki/Homework-Sam"
+        >current syllabus</a>
+      </div>
+      <div class="c-school">
+        NYU - Tisch - Interactive Telecommunications Program
+      </div>
+      <div class="c-sem">
+        <span class="f23">Fall 2023</span>
+        <span class="f25">Fall 2025</span>
+      </div>
+      <div class="c-description">
+        An introductory programming class for graduate students studying
+        computation and applying it to creative endeavors focusing on JavaScript
+        and p5.js
+      </div>
+
+    </div>
+    <div id="itp-blursed">
+      <div class="c-title">
+        Blessed / Blursed / Cursed
+      </div>
+      <div class="c-syl">
+        <a
+          href="https://www.notion.so/blursed/Syllabus-25098f21f7c4457da13e63c58d53b759"
+        >current syllabus</a>
+      </div>
+      <div class="c-school">
+        NYU - Tisch - Interactive Telecommunications Program
+      </div>
+      <div class="c-sem">
+        <span class="s23">Spring 2023</span>
+      </div>
+      <div class="c-description">
+        This course will explore the history and meaning of the ubiquitous
+        concept of “cursed” media, and provide students with a survey of digital
+        art tools for the creation of their own cursed animation, video,
+        photography, music, and web art.
+        <br />
+        Many people were first introduced to the concept of cursed media when it
+        exploded into mainstream internet discourse in 2016 with the
+        @cursedimages Twitter account, which posted found photos bound by their
+        unsettling effect on the viewer. Cursed media predates this account,
+        however, stretching back to medieval notions of cursed objects. We will
+        demonstrate how throughout time, cursed media has functioned like a slip
+        of the tongue that provides a window into the cultural unconscious,
+        where we encounter uncensored thoughts and feelings about race, gender,
+        class, and what it means to be human. In this way, cursed media disrupts
+        the order of what culture consciously claims to be, while becoming a
+        wildly popular aesthetic that no one likes.
+        <br />
+        From Amazon Muzak generators to Artbreeder’s GAN tools for image
+        creation, from machine learning text generators to robots who work at
+        Walmart, cursed media and tools for its creation bring into view the
+        ways that that culture reacts to tension between the increasingly
+        precarious position of human beings in the capitalist 21st century and
+        the threat of human erasure by the powerful forces of nature.
+        <br />
+        Students will be introduced to digital art tools for creating music,
+        manipulating photography and video, working with 3d animation, and
+        building web art. Students will attempt to create their own cursed
+        media, and in the process will gain a deeper understanding of the
+        unconscious biases and ethical implications of contemporary digital
+        creation tools.
+      </div>
 
     </div>
   </div>
