--- a/views/projects/bedside_bartender.handlebars
+++ b/views/projects/bedside_bartender.handlebars
@@ -1,15 +1,21 @@
 <div id="bedside-bartender" class="content">
-    <h4>bedside bartender</h4>
+  <h4>bedside bartender</h4>
 
-    <div class="footer full">
-        <div class="date">oct 2023</div>
-    <div class="blog"><a href="https://samheckle.github.io/projects/nightlight/" target="_blank">blog</a></div>
-        <div class="tools">lcd screen, raspberry pi, processing, plywood, acrylic</div>
-    </div>
-    <div class="cover-images">
-        <div class="two-image-row white"><img class="" src="assets/bedside_bartender/blinking.gif"></div>
-        <img class="two-image-row" src="assets/bedside_bartender/3Quater.png">
-        <img class="two-image-row" src="assets/bedside_bartender/Side.png">
-        <img class="two-image-row" src="assets/bedside_bartender/Ortho.png">
-    </div>
+  <div class="footer full">
+    <div class="date">oct 2023</div>
+    <div class="blog"><a
+        href="https://samheckle.github.io/projects/nightlight/"
+        target="_blank"
+      >blog</a></div>
+    <div class="tools">lcd screen, raspberry pi, processing, plywood, acrylic</div>
+  </div>
+  <div class="cover-images">
+    <div class="two-image-row white"><img
+        class=""
+        src="assets/bedside_bartender/blinking.gif"
+      /></div>
+    <img class="two-image-row" src="assets/bedside_bartender/3Quater.png" />
+    <img class="two-image-row" src="assets/bedside_bartender/Side.png" />
+    <img class="two-image-row" src="assets/bedside_bartender/Ortho.png" />
+  </div>
 </div>
