--- a/views/projects/corpus.handlebars
+++ b/views/projects/corpus.handlebars
@@ -1,6 +1,6 @@
 <div id="corpus" class="content">
     <h4>forms of relations are wounds /// </h4>
-    👉 <a href="https://corpusof.gay">  ✧✧✧ interact with me ✧✧✧ </a>  👈
+    👉 <a href="https://samheckle.com/corpus/">  ✧✧✧ interact with me ✧✧✧ </a>  👈
 
     <div class="footer full">
         <div class="date">mar 2023</div>
