--- a/views/projects/hngs.handlebars
+++ b/views/projects/hngs.handlebars
@@ -1,12 +1,41 @@
 <div id="hngs" class="content">
-    <h4>HNGS </h4>
-    {{!-- 👉 <a href="https://corpusof.gay">  ✧✧✧ interact with me ✧✧✧ </a>  👈 --}}
+  <h4>HNGS </h4>
+  {{! 👉 <a href="https://corpusof.gay">  ✧✧✧ interact with me ✧✧✧ </a>  👈 }}
 
-    <div class="footer full">
-        <div class="date">mar 2024</div>
-        <div class="tools">p5.js, SpaCy, tracery</div>
-    </div>
-    <div class="cover-images">
+  <div class="footer full">
+    <div class="date">mar 2024</div>
+    <div class="blog"><a
+        href="https://github.com/samheckle/spam"
+        target="_blank"
+      >blog</a></div>
+    <div class="tools">javascript, Three.js</div>
+  </div>
+  <div class="cover-images">
+    <div class="image-container"><img
+        class="full-image-row"
+        src="/assets/scam_print.jpg"
+      /></div>
+  </div>
+
+  <div class="description">
+    <div class="row">
+
+      <div class="desc-text">
+
+        A two print series featuring the new HNGS. product line. HNGS. can be
+        the product that elevates your life, imbibe in the latest in
+        nano-technology and genetic analysis to put you on the path of a
+        smarter, healthier future. Take HNGS. No more unfulfilled daydreams
+        about what could be. Take HNGS. Our product matching quiz starts with
+        the same m̷̢͇̦͓̭̖̩͚͛̅͆͌́̕ͅą̵̢̞͉̞̣̳͖̫̙̼̯̘̈́̒̄͋̐̿͑̆̏͒̃̿̍͠n̶̨̧͉̦̝̖̞͍̬̙̳̪͉̦̄̍͗͗͂̽͗̓̒͗i̷̡͚̻̯͓̫͙͍̹̼͚̫̭͒͒̀̒͒̅̈́f̸̲̥̼͓̩͍̜̹̥̺͊́̔̃̄͆̾̚ḛ̸̫̰̣̮̼̩͋͐̃͑̚ͅs̴̡̨̫̣͔̟͓̫̰̄t̶̛̛͆̔̆́͊̐͒̀̆̈́̔͌̚͝ͅa̶̧̡̧̳̰̲͕̖͖̙̰̟̱̫̗͖̞͌̈́̉̎t̴̠̍́̄͐̀͝į̵̨̯̞̟͙̾̀̋̏̀͗͝o̵̡̭̮̫̮͍̣͓̗̯͖̫͉̼͔̒͜ń̸̢̡̢̨̛͇͇̭̞̝͕͚̺̝̄̏̍̾̃̌́̀̈́ͅ: “I can improve my life for the better”. Ba̵s̴e̵d̸ ̸o̶n̷
+        ̷y̴o̸u̴ r ̶r̴e̵s̷u̵l̶t̸s̶y̶̬͌ǒ̶̹u̵̲͋ ̵̻̇w̶̺͆i̴̙̾l̴̟̿l̷̙̓ ̶͓͌f̴̝͒ì̷̲n̵̡͘ḏ̴͐t̵̡̥͐̑h̷̳͈̚e̶̺͇̍̄ ̵͖̙͝p̸̹̬͌̓ę̸͗r̸͉̃̚f̷͕̺̉̏ë̶̜́̆c̴̞͝ţ̶̀́ͅ ̵̰̅H̷͇̚Ṅ̴̯͔̄G̸͖͋Š̶̻.̵̡͇͂ ̵̩̖̌̉p̶͈̮͊͠r̷͍̰͛͠ỏ̷̥͉d̵̮̅u̸̥̼̒́c̶͇̮̿̓t̴̞͐͌ͅ ̶̧̹̈́̄ț̴͑o̵̯͐͛ ̷̭͊̈́m̵̞̋ͅa̷͉̪̎t̶̻̃c̷͚͆̇h̸̡̛̙́ ̴̬̉́ỷ̸̢͓̍o̶͇͐̿u̷̦͠ř̴͖̩ ̴̛̻͝e̸̲̪̋͒v̸̳̟̳́ẻ̸͍̦r̵̛͍̹͓͊̅̓y̵͙̗̎
+        ̵̗̜͆̋n̸̨̪̦̟͆̈́̕ẽ̸̗̫͕̆̇è̶̛͖̮͈́d̴̨̀͝.̸̧̩͒̌̿Don’t delą̴͉̈̂͐́̎ỳ̸̱̠͖̯̯̬̍T̵̳̣͔̺͈̂̿̿͋̃́̋͊̒͋̽̚̕͝a̷̡͙̪̞̳̬̜̰̜̜̾̈̈́͂͝͝k̴̢̜͇̱̺̪͖͓͊͋ͅè̷̢̢̠̖͕͔̯̻̯͓̱̝̘͋̽͌̌͆̍͆͐͌͋͊̚͜͝ ̴̼͎̘̙̾̎̏̈́̉́͗̏͆̈́̈͆̀̈̌̚ ̶̛̛̯͇̗͖̲̥̄͌̎̀̀͌͆͌̽̀͋̚̚͠H̷̢̨͍̦̲̻͓̙̣͎͍̜͈̬̥̻͔̣͑͐̅̽̈́͆̅̅͆͋̈́̅̂̅͆N̴̢̪̙͉̪̘͇̺̯̎͗̈̃̄͠G̸̬̽͊̎͐̈͗͋̇̕͝Ś̷̢̡̛̖̹̭̤͉̬̩̺̭̯̜̈̒̈́̒͂̀́͗̈́͂͋͊̿́͜͝.̴̢̖̱̹͔͍̓ ̷̢̘̯̖̥͍̱̩̺̣̼͇͎̹͛̊̊͗̂̿̋̾͒́̔̀̈́̌͊͝͝a̶n̸d̸ ̷ H̶̘̹̘̥̩͝N̶͈̗͈̐G̴̡̗̳̙͒̀̃̿̚ͅS̴̢̨̝̖̞͔̄̈́̓̚.̴̼̭͖̘̍̋̅̇̕ͅ ̵̻̺̔͌̊̈́̒́̚n̸̨̯͇̹̻͔̣͕͂̈́e̴̢̧͇̜͍̟̞̎̇̔́w̶̻̾̓̿̈͂́̕ ̶̥̣͈͔̇͗p̵̭̗̱̖͖͉̿̽r̷̦͍̥̩͕͈̬̐̾o̶̪͉͚̺͔̫̾̉̄͛̅̚d̴̥̤͔̩̿̓̐͛̓͝ư̶̗̩̋̃̂͗̽c̵͎̻̞̩̜̦̊̈́̿̏͛̚͝t̷̨̯̠̽͒̔͜ͅ ̴̼̝͙̭͉͌͌͆̔͐̍̆͝ͅm̸͕̯̜̗̹̯͂̀̊͒͝a̷̧͍̳̞͙͉̟͐̒̍̏̀͝͝t̶̢̡̲͍̩͗̐̓̐͑̈́͝c̵͚̆ȟ̶̡̤͍̿͛i̴̙̇̈̅̋̋̏̏̑n̵̤̳̻̓̈ģ̵͉̳̬̙̬̌̾́͑͆̚͜ ̴̧̡̝͕̺̃̅̌̅̋̿̚̕ͅq̴̼͚͖̠͉̜̜͎̑̈́͘̚͝u̶̢͕͠ĩ̵̢̡̘̭͇̒̉̂̔͜͝z̸͖͓̞̯̙̮̮͋̕.̵̧̡͉̖̗̭͆
         
+        <ul>✧ Exhibited as a part of the <a href="https://www.1-800-i-was-scammed.com/">Scam Auction</a></ul>
+        <ul>✧ Sold as <a href="https://www.1-800-i-was-scammed.com/scam_collection_catalog.pdf">Lot 118</a></ul>
+        <ul>✧ Created with <a href="https://abstract.computer/">@duncan</a></ul>
+      </div>
     </div>
+
+  </div>
 </div>
