--- a/views/projects/limerance.handlebars
+++ b/views/projects/limerance.handlebars
@@ -12,4 +12,9 @@
         src="assets/limerance.png"
       /></div>
     </div>
+    <div class="description">
+        <ul>Created with <a href="https://cha.ski/">@chaski</a> and <a href="https://nataliefajardo.com/">@nat</a>
+        </ul>
+        
+    </div>
 </div>
