--- a/views/projects/thesis.handlebars
+++ b/views/projects/thesis.handlebars
@@ -1,23 +1,35 @@
 <div id="thesis" class="content">
   <h4>don't look for the love of god</h4>
 
-  <div class="footer">
+  <div class="footer full">
     <div class="date">april 2022</div>
-    <div class="blog"><a href="https://samheckle.github.io/blog/thesis" target="_blank">blog</a></div>
+    <div class="blog"><a
+        href="https://samheckle.github.io/blog/thesis"
+        target="_blank"
+      >blog</a></div>
     <div class="tools">electron.js, python, gpt-2, plywood</div>
   </div>
-  {{! <div class="cover-images">
-        <img src="assets/thesis/slide1.png">
-        <img src="assets/thesis/slide2.jpg">
-        <img src="assets/thesis/slide3.png">
-    </div> }}
+  <div class="cover-images">
+    <div class="image-container"><img
+        class="full-image-row"
+        src="assets/thesis/slide1.png"
+      />
+    </div>
+  </div>
+  <div class="description">
+    <div class="row">
+      <img src="assets/thesis/archive-image-4.jpg" />
+      <div class="desc-text">
+        Humans have an innate tendency to explore, classify, and catalog information of their own experiences. By telling stories about the lives we are living, we live outside of ourselves – these externalizations of our interiorities simultaneously connect us to the world and disconnect us from ourselves. Social media is a contemporary channel through which we share our selves and our stories. The connectedness that the current Internet has allowed for has become irreversible, and checking our screens has become a daily routine. In online spaces, we are classified with labels that create barriers between ourselves and others. We are given content that the algorithm classifies as good for us. This randomness in how we see and interact with online content is fascinating. Are our classifications random or are they truly a reflection of who we are? Is it fate we saw a particular piece of media and it resonated with us? My proclamation is this: there is no boundary between fate and randomness, they coexist yet we only acknowledge the former. 
+        <br>
+        Fate is random. Algorithms are rituals. My proposition is to create a ritual where an observer can interact with randomness on a transcendent level. 
+        <br>
+        How the ritual actually physically manifests itself is through a touchscreen interface that has procedurally generated content. This interface is installed on a platform that the physical user must step up to and physically spin the touchscreen to begin the ritual. On the touchscreen is a series of early-2000 inspired popups, created using generated text and images. While the participant is partaking in the ritual, the computer is also participating, closing random windows when the user does. At the end of the ritual, the user chooses a song to add to the ambient playlist that will impact future worship.
+      </div>
+    </div>
 
-  <div class="carousel-content">
-    <div class="carousel">
-      <img class="carousel-item" src="assets/thesis/slide1.png" />
-      {{! <img class="carousel-item" src="assets/thesis/slide2.jpg"> }}
-      <img class="carousel-item adjust--image" src="assets/thesis/slide3.png" />
-      <div class="iframe carousel-item">
+    <div class="row">
+      <div class="iframe">
         <iframe
           src="https://player.vimeo.com/video/715867942?h=250d998479"
           width="640"
@@ -28,11 +40,16 @@
         ></iframe>
       </div>
     </div>
-    <div class="scroll-btns">
-      <div id="btn-back" class="scroll-btn">👈</div>
-      <div id="btn-forward" class="scroll-btn">👉</div></div>
+    <div class="row">
+
+      <div class="desc-text">
+        <ul>✧ watch the talk
+          <a href="https://vimeo.com/715867942">here</a></ul>
+        <ul>✧ view the
+          <a href="https://itp.nyu.edu/thesis2022/?sam-heckle">archive post</a></ul>
+      </div>
+      <img src="assets/thesis/slide3.png" />
+    </div>
+
   </div>
-  {{! <div class="iframe">
-    <iframe src="https://player.vimeo.com/video/715867942?h=250d998479" width="640" height="360" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
-    </div> }}
 </div>
