--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@ nav {
   width: 20%;
   border-right: solid white 2px;
   height: 100%;
+  overflow-y: scroll;
 }
 
 nav ul {
@@ -139,6 +140,7 @@ a {
 .iframe > iframe {
   min-width: 300px;
   height: 500px;
+  margin: auto;
 }
 .cover-images img {
   max-width: calc(100% / 3 - 10px);
@@ -186,6 +188,57 @@ a {
 .footer.full{
   width: 90%;
 }
+
+/* specific to classes */
+.content,
+.classes,
+.text {
+  flex-direction: column;
+}
+
+.c-title{
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.c-school{
+  font-size: 1em;
+  font-weight: lighter;
+}
+
+.c-sem {
+  padding-bottom: 2px;
+}
+
+.c-sem > span{
+  padding-left: 2px;
+  padding-right: 2px;
+  font-weight: bold;
+  color: black;
+}
+.f23{
+  background-color: #ff9a00;
+}
+.s23{
+  background-color: #00ff04;
+}
+.f24{
+  background-color: #00c5ff;
+}
+.s24{
+  background-color:  #ff00a7;
+}
+.s25{
+  background-color: #9101f7;
+}
+.f25{
+  background-color: #41ead4;
+}
+
+.c-description > br {
+  margin-bottom: 10px;
+}
+
 /* specific to blackout */
 #blackout2 > #content{
   position: absolute;
@@ -233,6 +286,45 @@ a {
 
 .text a{
   font-size: 13px;
+}
+
+.description {
+  border-bottom: 2px solid yellow;
+  width: 90%;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.description a{
+  font-size: 12px;;
+}
+
+.description .row{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  justify-content: space-between;
+  width: 100%;
+}
+.description .desc-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.description .desc-text br{
+  margin-bottom: 10px;
+}
+
+.description img{
+  max-width: calc(100% / 2 - 10px);
+  object-fit: cover;
+}
+
+.row > .iframe {
+  justify-content: space-around;
+  display: flex;
+  width: 100%;
 }
 
 @media (min-width: 320px) {
