--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,9 +17,11 @@
       <div class="name"><h1><a href="/">✧✧✧ sam heckle ✧✧✧</a></h1></div>
       <div class="projects">
         <h3>projects</h3>
-        <ul>✧ <a href="https://corpusof.gay/spam">HNGS</a></ul>
+        <ul>✧ <a href="/organs">seeing fast and slow</a></ul>
+        <ul>✧ <a href="/cal">cal.red</a></ul>
+        <ul>✧ <a href="/hngs">HNGS</a></ul>
         <ul>✧ <a href="/limerance">limerance</a></ul>
-        <ul>✧ <a href="/corpus">forms of relations are wounds ///</a></ul>
+        <ul>✧ <a href="/forms">forms of relations are wounds ///</a></ul>
         <ul>✧ <a href="/valentine">will u be my valentine?</a></ul>
         <ul>✧ <a href="/thesis">don't look for the love of god (spectulative ritual #2)</a></ul>
         {{!-- <ul>✧ <a href="/blackout2">blackout poetry #2</a></ul> --}}
@@ -36,11 +38,13 @@
       </div>
       <div class="classes">
         <h3>classes</h3>
-        <ul>✧ <a href="">networked media</a></ul>
-        <ul>✧ <a href="">experimental coding</a></ul>
-        <ul>✧ <a href="">capstone</a></ul>
-        <ul>✧ <a href="">creative machine learning</a></ul>
-        <ul>✧ <a href="">introduction to computational media</a></ul>
+        <ul>✧ <a href="/classes#net-media">networked media</a></ul>
+        <ul>✧ <a href="/classes#creative-code">creative code</a></ul>
+        <ul>✧ <a href="/classes#exp-code">experimental coding</a></ul>
+        <ul>✧ <a href="/classes#ima-capstone">ima capstone</a></ul>
+        <ul>✧ <a href="/classes#creative-ml">creative machine learning</a></ul>
+        <ul>✧ <a href="/classes#itp-icm">introduction to computational media</a></ul>
+        <ul>✧ <a href="/classes#itp-blursed">blessed/blursed/cursed</a></ul>
       </div>
       {{!-- <div class="talks">
         <h3>talks</h3>
