--- a/public/biz-card.css
+++ b/public/biz-card.css
@@ -10,6 +10,7 @@
         justify-content: space-around;
         height: 100%;
         font-size: 16px;
+        overflow-y:scroll;
     }
     h1{
         padding: 3px 0px;
